[package]
name = "offload-disk-client"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = "1.5"

[dependencies]
tauri = { version = "1.5", features = ["updater"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream", "cookies"] }
tokio = { version = "1.36", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
futures-util = "0.3"

[features]
custom-protocol = ["tauri/custom-protocol"]