[package]
name = "offload-disk-client"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "http-all", "dialog-open", "updater"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream", "cookies"] }
tokio = { version = "1.36", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
futures-util = "0.3"
sha2 = "0.10"
base64 = "0.22"
aes = "0.8"
ctr = "0.9"
ghash = "0.5"
zip = "0.6"

[features]
custom-protocol = ["tauri/custom-protocol"]
